Fix CORS configuration to allow all origins